k8s/dex/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dex
  labels:
    app.kubernetes.io/name: dex
    app.kubernetes.io/component: identity-provider
