k8s/dex/04-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: dex
  labels:
    app: dex
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 5556
    targetPort: http
    protocol: TCP
  - name: telemetry
    port: 5558
    targetPort: telemetry
    protocol: TCP
  - name: grpc
    port: 5557
    targetPort: grpc
    protocol: TCP
  selector:
    app: dex
